add data and domain logic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
     <string name="search_hint">Find company or ticker</string>
     <string name="stocks_page_title">Stocks</string>
     <string name="favorite_page_title">Favourite</string>
+
+    <string name="current_price_pattern">\u0024%1$f</string>
+    <string name="price_change_up_pattern">+\u0024%1$f (%2$f%%)</string>
+    <string name="price_change_down_pattern">-\u0024%1$f (%2$f%%)</string>
 </resources>
