добавлен переход в активити с детальной инфой при клике на элемент в ресайклерах в табах
Переход в активити детал. инфы из поиска, активити детал. инфы и мелкие правки дизайна
- контент в активити с детальной инфой
- добавлен переход в активити с детальной инфой при клике на элемент в ресайклере в активити поиска
- поправлено форматирование чисел
- добавлена полосатая раскраска

Правка по окраске списка в ресайклере, добавлен текст ошибки загрузки на экран детальной инфы

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,11 +4,14 @@
     <string name="stocks_page_title">Stocks</string>
     <string name="favorite_page_title">Favourite</string>
 
-    <string name="current_price_pattern">\u0024%1$f</string>
-    <string name="price_change_up_pattern">+\u0024%1$f (%2$f%%)</string>
-    <string name="price_change_down_pattern">-\u0024%1$f (%2$f%%)</string>
+    <string name="current_price_pattern">\u0024%1$.2f</string>
+    <string name="price_change_up_pattern">+\u0024%1$.2f (%2$.2f%%)</string>
+    <string name="price_change_down_pattern">-\u0024%1$.2f (%2$.2f%%)</string>
 
     <string name="recent_search">You’ve searched for this</string>
     <string name="recent_search_empty">Your search history is empty. Make a try to search by company name or ticker. =)</string>
     <string name="search_result_empty">No results were found for your search request or an error has occurred. =( Please, try another one.</string>
+    <string name="industry_title">Industry: %1$s</string>
+    <string name="web_url_link">&lt;u&gt;%1$s&lt;/u&gt;</string>
+    <string name="error_details_loading">Company info is not loaded. =( Check your internet connection.</string>
 </resources>
